--- a/QualityReaderQR/Info.plist
+++ b/QualityReaderQR/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFileProviderPresenceUsageDescription</key>
+	<string>Porter@ iOS escribirá en el disco local.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+	</dict>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>Porter@ iOS necesita guardar información en Documentos.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Necesitamos escanear codigo QR.</string>
 	<key>CFBundleDevelopmentRegion</key>
